# Light

./: .editorconfig  .gitattributes  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  CONTRIBUTING.md  Cmakelists.txt  Doxyfile  LICENSE  README.md  Use-example.html  annotated.html  appconfig_8hpp_source.html  application_8hpp_source.html  applicationevent_8hpp_source.html  appstats_8hpp_source.html  boundingvolume_8hpp_source.html  buffer_8hpp_source.html  bug.html  bvh_8cpp.html  bvh_8cpp__incl.map  bvh_8cpp__incl.md5  bvh_8hpp_source.html  camera_8hpp_source.html  categoryViewController_07_08-members.html  categoryViewController_07_08.html  categoryViewController_07_08__coll__graph.dot  classLight_1_1AppConfig-members.html  classLight_1_1AppConfig.html  classLight_1_1Application-members.html  classLight_1_1Application.html  classLight_1_1BufferLayout-members.html  classLight_1_1BufferLayout.html  classLight_1_1Camera-members.html  classLight_1_1Camera.html  classLight_1_1Camera__inherit__graph.map  classLight_1_1Cubemap-members.html  classLight_1_1Cubemap.html  classLight_1_1Cubemap__inherit__graph.map  (+1428 more)
Editor/: CMakeLists.txt  CMakelists.txt  imgui.ini
Editor/assets/icon/: light.rc
Editor/assets/shaders/: depth.glsl  depthCube.glsl  outline-temp.glsl  outline.glsl  phong.glsl  phong_fragment.glsl  phong_vertex.glsl  skybox.glsl  texture.glsl
Editor/include/: Cube.hpp  Editor.hpp  Objects.hpp  Scene.hpp  SceneObject.hpp  Skybox.hpp  components.hpp  entity.hpp  entt.hpp  scene.hpp
Editor/include/gui/: assetbrowser.hpp  projectnamepopup.hpp  scenepanel.hpp  viewportpanel.hpp
Editor/include/layers/: editorlayer.hpp
Editor/src/: Cube.cpp  Editor.cpp  Objects.cpp  Scene.cpp  Skybox.cpp  components.cpp  entity.cpp  scene.cpp
Editor/src/gui/: assetbrowser.cpp  projectnamepopup.cpp  scenepanel.cpp  viewportpanel.cpp
Editor/src/layers/: editorlayer.cpp
Light/: CMakeLists.txt  Cmakelists.txt
Light/assets/shaders/: phong.fs  skybox.fs  skybox.glsl  skybox.vs  texture.fs  texture.vs
Light/include/: light.hpp
Light/include/core/: application.hpp  base.hpp  entrypoint.hpp  input.hpp  layer.hpp  layerstack.hpp  logging.hpp  timestep.hpp  window.hpp
Light/include/ecs/: components.hpp  entity.hpp  scene.hpp
Light/include/events/: applicationevent.hpp  event.hpp  keyevent.hpp  mouseevent.hpp
Light/include/imgui/: imguilayer.hpp
Light/include/input/: keycodes.h
Light/include/light/rendering/: buffer.hpp  camera.hpp  framebuffer.hpp  graphicscontext.hpp  lights.hpp  mesh.hpp  rendercommand.hpp  renderer.hpp  rendererapi.hpp  shader.hpp  texture.hpp  vertexarray.hpp
Light/include/platform/glfw/: windowglfw.hpp
Light/include/platform/opengl/: openglbuffer.hpp  openglcontext.hpp  openglframebuffer.hpp  openglrendererapi.hpp  openglshader.hpp  opengltexture.hpp  openglvertexarray.hpp
Light/include/rendering/: buffer.hpp  camera.hpp  cameracontroller.hpp  editorcamera.hpp  framebuffer.hpp  graphicscontext.hpp  rendercommand.hpp  renderer.hpp  rendererapi.hpp  shader.hpp  texture.hpp  vertexarray.hpp
Light/libs/glad/: CMakeLists.txt
Light/libs/glad/src/: gl.c
Light/libs/stbimage/: stb_image.cpp
Light/shadersrc/: phong.vs  test.fs  test.vs  texture.fs  texture.vs
Light/src/core/: application.cpp  layerstack.cpp  logging.cpp
Light/src/ecs/: components.cpp  entity.cpp  scene.cpp
Light/src/imgui/: imguilayer.cpp
Light/src/platform/glfw/: inputglfw.cpp  windowglfw.cpp
Light/src/platform/opengl/: imgui_impl_opengl3.cpp  openglbuffer.cpp  openglcontext.cpp  openglframebuffer.cpp  openglrendererapi.cpp  openglshader.cpp  opengltexture.cpp  openglvertexarray.cpp
Light/src/rendering/: camera.cpp  cameracontroller.cpp  editorcamera.cpp  light.cpp  mesh.cpp  renderer.cpp  shader.cpp
LightFramework/: CMakeLists.txt
LightFramework/include/: light.hpp
LightFramework/include/config/: appconfig.hpp
LightFramework/include/core/: application.hpp  appstats.hpp  entrypoint.hpp  input.hpp  layer.hpp  layerstack.hpp  timer.hpp  timestep.hpp  uuid.hpp  window.hpp
LightFramework/include/ecs/: components.hpp  entity.hpp  scene.hpp
LightFramework/include/events/: applicationevent.hpp  event.hpp  keyevent.hpp  mouseevent.hpp
LightFramework/include/imgui/: imguilayer.hpp
LightFramework/include/input/: keycodes.hpp  mousecodes.hpp
LightFramework/include/platform/glfw/: inputglfw.hpp  windowglfw.hpp
LightFramework/include/platform/opengl/: openglbuffer.hpp  openglframebuffer.hpp  openglrendererapi.hpp  opengltexture.hpp  openglvertexarray.hpp
LightFramework/include/rendering/: editorcamera.hpp  renderer.hpp  scenerenderer.hpp  vertexarray.hpp
LightFramework/include/resources/: resource.hpp  resourcecache.hpp  resourcemanager.hpp
LightFramework/libs/entt/: entt.hpp
LightFramework/libs/glad/src/: glad.c
LightFramework/libs/stbimage/: CMakeLists.txt
LightFramework/src/config/: appconfig.cpp
LightFramework/src/core/: application.cpp  filesystem.cpp  layerstack.cpp
LightFramework/src/ecs/: components.cpp  entity.cpp  scene.cpp
LightFramework/src/imgui/: imguilayer.cpp
LightFramework/src/platform/glfw/: inputglfw.cpp  windowglfw.cpp
LightFramework/src/platform/opengl/: imgui_build.cpp  openglframebuffer.cpp  openglrendererapi.cpp  openglvertexarray.cpp
LightFramework/src/rendering/: editorcamera.cpp  scenerenderer.cpp
LightFramework/src/resources/: resource.cpp  resourcecache.cpp  resourcemanager.cpp
LightFramework/tests/: CMakeLists.txt  main.cpp  test_resources.cpp
Physicc/: CMakeLists.txt
Physicc/include/: boundingvolume.hpp  broadphase.hpp  bvh.hpp  bvhnode.hpp  collider.hpp  narrowphase.hpp  narrowphase.ipp  physicsworld.hpp  pseudotests.txt  rigidbody.hpp
Physicc/src/: boundingvolume.cpp  broadphase.cpp  bvh.cpp  bvhnode.cpp  collider.cpp  narrowphase.cpp  physicsworld.cpp  rigidbody.cpp
Physicc/tests/: CMakeLists.txt  broadphase_tests.cpp  bvh_tests.cpp  narrowphase_tests.cpp  rigidbody_tests.cpp  rigidbodytests.cpp
Testing/: CMakeLists.txt
shared/libs/tracy/: CMakeLists.txt
tools/tracy/: CMakeLists.txt
(+3851 files in other folders)
